--- a/src/assets/css/game.css
+++ b/src/assets/css/game.css
@@ -1,5 +1,16 @@
 @charset "utf-8";
 /* CSS Document */
+
+html,body{
+
+height: 100%; margin: 0; padding: 0;
+
+}
+
+img{
+	max-width:100%;
+	height:auto;
+}
 body{
 	padding: 0px;
 	background-color: #000;
@@ -7,15 +18,15 @@ body{
 	background-repeat: repeat;
 	color: #FFF;
 }
-
+ul{
+	list-style: none;
+}
 ul,
 ol {
 	padding: 0;
 	margin: 0;
 }
-ul{
-	list-style: none;
-}
+
 .rwd-img{width: 100%;}
 
 .font-red{
@@ -51,6 +62,12 @@ ul{
 	padding-left: 10px;
 }
 
+.b{
+	margin-right: 5px;
+	margin-left: 5px;
+
+}
+
 /*-------------------------------------------
      基本版面設定區
 -------------------------------------------*/
@@ -59,6 +76,17 @@ ul{
 	float: left;
 	width: 100%;
 }
+
+.logo{
+	float: left;
+	height: 80px;
+}
+
+.left-btn{
+	float: left;
+	width: 100%;
+}
+
 
 .container-wap{
 	
@@ -80,7 +108,7 @@ ul{
 	width: 100%;
 }
 .bp-box{
-	border: 2px solid #fff;
+	border: 1px solid #fff;
 	float: left;
 	width: 100%;
 	background-color: #FFF;
@@ -101,6 +129,9 @@ ul{
 	padding-right: 1%;
 	padding-left: 1%;
 }
+
+
+
 .stand-box{
 	border: 2px solid #262626;
 	float: left;
@@ -144,7 +175,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6383838', e
      按鈕設定區
 -------------------------------------------*/
 .btn{
-	max-width:120px;
 	display: inline-block;
 	line-height: 1.75em;
 	text-align: center;
@@ -158,14 +188,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6383838', e
 	-ms-user-select: none;
 	user-select: none;
 	background-image: none;
-	font-size: 148%;
+	font-size: 136%;
 	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
 	text-decoration: none;
 	color: #fff6d5;
 	padding-top: 5px;
-	padding-right: 25px;
+	padding-right: 0px;
 	padding-bottom: 5px;
-	padding-left: 25px;
+	padding-left: 0px;
 	margin-top: 5px;
 	margin-right: 10px;
 	margin-bottom: 5px;
@@ -178,10 +208,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6383838', e
 	background: -webkit-linear-gradient(top,  rgba(174,139,39,1) 0%,rgba(119,81,36,1) 99%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom,  rgba(174,139,39,1) 0%,rgba(119,81,36,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 
+
+
+
+
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ae8b27', endColorstr='#775124',GradientType=0 ); /* IE6-9 */
 	border-radius: 10px;
 	box-shadow: 0px 0px 0px #9e9e9e;
 	transition: 1s;
+	float: left;
+	width: 100%;
 }
 
 .btn.active.focus,.btn.active:focus,.btn.focus,.btn:active.focus,.btn:active:focus,.btn:focus{
@@ -194,9 +230,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ae8b27', end
 }.btn.focus,.btn:focus,.btn:hover{
 	border-radius: 10px;
 	padding-top: 5px;
-	padding-right: 25px;
+	padding-right: 0px;
 	padding-bottom: 5px;
-	padding-left: 25px;
+	padding-left: 0px;
 	margin-top: 5px;
 	margin-right: 10px;
 	margin-bottom: 5px;
@@ -212,6 +248,8 @@ background: linear-gradient(to bottom,  rgba(119,81,36,1) 0%,rgba(174,139,39,1) 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', endColorstr='#ae8b27',GradientType=0 ); /* IE6-9 */
 	transition: 1s;
 }.btn.active,.btn:active{background-image:none;outline:0;-webkit-box-shadow:inset 0 3px 5px rgba(0,0,0,.125);box-shadow:inset 0 3px 5px rgba(0,0,0,.125)}.btn.disabled,.btn[disabled],fieldset[disabled] .btn{cursor:not-allowed;filter:alpha(opacity=65);-webkit-box-shadow:none;box-shadow:none;opacity:.65}a.btn.disabled,fieldset[disabled] a.btn{pointer-events:none}
+
+
 
 .btn-p{
 	display: inline-block;
@@ -242,6 +280,61 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	padding-right: 0;
 	padding-bottom: 8px;
 	padding-left: 0;
+}
+
+.btn-ps{
+	display: inline-block;
+	line-height: 1.75em;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
+	text-decoration: none;
+	font-size: 12px;
+	color: #0066CC;
+	background-color: #fff;
+	transition: 1s;
+	width: 20px;
+	height: 20px;
+	text-align: center;
+	line-height: 1.428571429;
+	border-radius: 20px;
+	margin: 1px;
+	border: 2px solid #0066CC;
+}
+
+.btn-pss{
+	display: inline-block;
+	line-height: 1.75em;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
+	text-decoration: none;
+	font-size: 12px;
+	color: #FFFFFF;
+	background-color: #0066CC;
+	transition: 1s;
+	width: 10px;
+	height: 10px;
+	text-align: center;
+	line-height: 1.428571429;
+	border-radius: 20px;
+	margin: 1px;
 }
 
 .btn-p.active.focus,.btn-p.active:focus,.btn-p.focus,.btn-p:active.focus,.btn-p:active:focus,.btn-p:focus{
@@ -301,6 +394,62 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	transition: 1s;
 }.btn-b.active,.btn-b:active{background-image:none;outline:0;-webkit-box-shadow:inset 0 3px 5px rgba(0,0,0,.125);box-shadow:inset 0 3px 5px rgba(0,0,0,.125)}.btn-b.disabled,.btn-b[disabled],fieldset[disabled] .btn-b{cursor:not-allowed;filter:alpha(opacity=65);-webkit-box-shadow:none;box-shadow:none;opacity:.65}a.btn-b.disabled,fieldset[disabled] a.btn-b{pointer-events:none}
 
+.btn-bs{
+	display: inline-block;
+	line-height: 1.75em;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	font-size: 12px;
+	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
+	text-decoration: none;
+	color: #FF0000;
+	background-color: #fff;
+	transition: 1s;
+	width: 20px;
+	height: 20px;
+	text-align: center;
+	line-height: 1.428571429;
+	border-radius: 20px;
+	margin: 1px;
+	padding-left: 0;
+	border: 2px solid #FF0000;
+}
+.btn-bss{
+	display: inline-block;
+	line-height: 1.75em;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	font-size: 12px;
+	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
+	text-decoration: none;
+	color: #FFFFFF;
+	background-color: #FF0000;
+	transition: 1s;
+	width: 10px;
+	height: 10px;
+	text-align: center;
+	line-height: 1.428571429;
+	border-radius: 20px;
+	margin: 1px;
+	padding-left: 0;
+}
+
 .btn-c{
 	display: inline-block;
 	line-height: 1.75em;
@@ -332,6 +481,63 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	padding-left: 0;
 }
 
+.btn-cs{
+	display: inline-block;
+	line-height: 1.75em;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	font-size: 12px;
+	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
+	text-decoration: none;
+	color: #166d0a;
+	background-color: #FFFFFF;
+	transition: 1s;
+	width: 20px;
+	height: 20px;
+	text-align: center;
+	line-height: 1.428571429;
+	border-radius: 20px;
+	margin: 1px;
+	border: 2px solid #166d0a;
+}
+
+.btn-css{
+	display: inline-block;
+	line-height: 1.75em;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	font-size: 12px;
+	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
+	text-decoration: none;
+	color: #166d0a;
+	background-color: #FFFFFF;
+	transition: 1s;
+	width: 10px;
+	height: 10px;
+	text-align: center;
+	line-height: 1.428571429;
+	border-radius: 20px;
+	margin: 1px;
+	border: 2px solid #166d0a;
+}
+
+
 .btn-c.active.focus,.btn-c.active:focus,.btn-c.focus,.btn-c:active.focus,.btn-c:active:focus,.btn-c:focus{
 	outline: thin dotted;
 	outline: 5px auto -webkit-focus-ring-color;
@@ -346,20 +552,172 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 }.btn-c.active,.btn-c:active{background-image:none;outline:0;-webkit-box-shadow:inset 0 3px 5px rgba(0,0,0,.125);box-shadow:inset 0 3px 5px rgba(0,0,0,.125)}.btn-c.disabled,.btn-c[disabled],fieldset[disabled] .btn-c{cursor:not-allowed;filter:alpha(opacity=65);-webkit-box-shadow:none;box-shadow:none;opacity:.65}a.btn-c.disabled,fieldset[disabled] a.btn-c{pointer-events:none}
 
 /*-------------------------------------------
+     硬幣設定區
+-------------------------------------------*/
+
+.coin-menu1{
+	background-image: url('../../images/coin5.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+.coin-menu1:hover{
+	background-image: url('../../images/coin5-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+
+.coin-menu1-current{
+	background-image: url('../../images/coin5-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+
+.coin-menu2{
+	background-image: url('../../images/coin10.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+.coin-menu2:hover{
+	background-image: url('../../images/coin10-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+
+.coin-menu2-current{
+	background-image: url('../../images/coin10-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+
+.coin-menu3{
+	background-image: url('../../images/coin50.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+.coin-menu3:hover{
+	background-image: url('../../images/coin50-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+.coin-menu3-current{
+	background-image: url('../../images/coin50-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+
+.coin-menu4{
+	background-image: url('../../images/coin100.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+.coin-menu4:hover{
+	background-image: url('../../images/coin100-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+
+.coin-menu4-current{
+	background-image: url('../../images/coin100-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+
+.coin-menu5{
+	background-image: url('../../images/coin500.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+.coin-menu5:hover{
+	background-image: url('../../images/coin500-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+
+.coin-menu5-current{
+	background-image: url('../../images/coin500-hover.png');
+	background-repeat: no-repeat;
+	background-size: contain;	
+	float: left;
+	height: 53px;
+	width: 65px;
+}
+/*-------------------------------------------
+     網格設定區
+-------------------------------------------*/
+
+.game-board
+{
+	width: 35px;
+	height: 35px;
+	display: grid;
+	grid-template: repeat(6, 1fr) / repeat(8, 1fr);
+	float: left;
+}
+
+.box{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+/*-------------------------------------------
      欄目設定區
 -------------------------------------------*/
 .gem-left{
 	float: left;
-	width: 11%;
+	width: 10%;
 	background-color: #1e1101;
 	border: 1px solid #654d31;
 	background-image: url('../../images/left-bg.jpg');
 	background-repeat: no-repeat;
 	background-position: left top;
 	position: relative;
+	height: 100%;
 }
-.gem-main{float: left;width: 66%;}
-.gem-right{	float: left;width: 23%;}
+.gem-main{float: left;width: 64%;}
+.gem-right{	float: left;width: 26%;}
 
 .grid-container {
   display: grid;
@@ -439,16 +797,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', end
 	padding-bottom: 5px;
 	color: #d2c0a8;
 }
+
 /*-------------------------------------------
      自適應設定區
 -------------------------------------------*/
 @media screen and (max-width: 1280px) {
+	
+.logo{
+	float: left;height: 80px;
+}	
+	
 .align-items-end{
 	-ms-flex-align: end!important;
 	align-items: flex-end!important;
 	position: static;
 	bottom: 0px;
 	width: 100%;
+	float: left;
 }
 	
 /*-------------------------------------------
@@ -463,7 +828,53 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', end
 	background-repeat: no-repeat;
 	background-position: left top;
 	position: relative;
+	height: auto;
 }
+
 .gem-main{float: left;width: 100%;}
 .gem-right{	float: left;width: 100%;}	
+/*-------------------------------------------
+     按鈕設定區
+-------------------------------------------*/
+.btn{
+	max-width:120px;
+	display: inline-block;
+	line-height: 1.75em;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-image: none;
+	font-size: 128%;
+	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
+	text-decoration: none;
+	color: #fff6d5;
+	padding-top: 5px;
+	padding-right: 20px;
+	padding-bottom: 5px;
+	padding-left: 20px;
+	margin-top: 5px;
+	margin-right: 0px;
+	margin-bottom: 5px;
+	margin-left: 5px;
+	border: 0px solid #d0c0a4;
+	background-color: #ae8b27;
+	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ae8b27+0,775124+99 */
+	background: rgb(174,139,39); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(174,139,39,1) 0%, rgba(119,81,36,1) 99%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(174,139,39,1) 0%,rgba(119,81,36,1) 99%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  rgba(174,139,39,1) 0%,rgba(119,81,36,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ae8b27', endColorstr='#775124',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	box-shadow: 0px 0px 0px #9e9e9e;
+	transition: 1s;
 }
+
+	}
