--- a/src/assets/css/jquery.atAccordionOrTabs.css
+++ b/src/assets/css/jquery.atAccordionOrTabs.css
@@ -11,7 +11,12 @@
 	border: none;
 	width: 100%;
 	padding: 0;
-	clear: both;
+	clear: both;	
+	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#383838+1,000000+100&0.65+3,0+9 */
+background: -moz-linear-gradient(top,  rgba(56,56,56,0.65) 1%, rgba(55,55,55,0.65) 3%, rgba(52,52,52,0) 9%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(56,56,56,0.65) 1%,rgba(55,55,55,0.65) 3%,rgba(52,52,52,0) 9%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(56,56,56,0.65) 1%,rgba(55,55,55,0.65) 3%,rgba(52,52,52,0) 9%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6383838', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 	/*visibility: hidden; */
 }
 
@@ -95,9 +100,9 @@
 	float: left;
 	top: -1px;
 	left: 0;
-	margin-bottom: 24px;
-
+	background-color: #000;
 	z-index: 99;
 	border-radius: 0px;
 	box-sizing: border-box;
+	padding-bottom: 24px;
 	}
