--- a/src/assets/css/game.css
+++ b/src/assets/css/game.css
@@ -551,132 +551,87 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 -------------------------------------------*/
 
 .coin-menu1{
-	background-image: url('../../images/coin5.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+	background-image: url('../../images/coin.png');
+	background-position: 0px 0px;
 	float: left;
-	height: 53px;
-	width: 65px;
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
-.coin-menu1:hover{
-	background-image: url('../../images/coin5-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+.coin-menu1:hover,.coin-menu1-current{
+	background-image: url('../../images/coin.png');
+	background-position: 0px -65px;
 	float: left;
-	height: 53px;
-	width: 65px;
+	/* height: 53px;
+	width: 65px; */
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
-
-.coin-menu1-current{
-	background-image: url('../../images/coin5-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
-	float: left;
-	height: 53px;
-	width: 65px;
-}
-
 .coin-menu2{
-	background-image: url('../../images/coin10.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+	background-image: url('../../images/coin.png');
+	background-position: -79px 0px;
 	float: left;
-	height: 53px;
-	width: 65px;
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
-.coin-menu2:hover{
-	background-image: url('../../images/coin10-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+.coin-menu2:hover,.coin-menu2-current{
+	background-image: url('../../images/coin.png');
+	background-position: -79px -65px;
 	float: left;
-	height: 53px;
-	width: 65px;
-}
-
-.coin-menu2-current{
-	background-image: url('../../images/coin10-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
-	float: left;
-	height: 53px;
-	width: 65px;
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
 
 .coin-menu3{
-	background-image: url('../../images/coin50.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+	background-image: url('../../images/coin.png');
+	background-position: -158px 0px;
 	float: left;
-	height: 53px;
-	width: 65px;
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
-.coin-menu3:hover{
-	background-image: url('../../images/coin50-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+.coin-menu3:hover,.coin-menu3-current{
+	background-image: url('../../images/coin.png');
+	background-position: -158px -65px;
 	float: left;
-	height: 53px;
-	width: 65px;
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
-.coin-menu3-current{
-	background-image: url('../../images/coin50-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
-	float: left;
-	height: 53px;
-	width: 65px;
-}
-
 .coin-menu4{
-	background-image: url('../../images/coin100.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+	background-image: url('../../images/coin.png');
+	background-position: -237px 0px;
 	float: left;
-	height: 53px;
-	width: 65px;
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
-.coin-menu4:hover{
-	background-image: url('../../images/coin100-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+.coin-menu4:hover,.coin-menu4-current{
+	background-image: url('../../images/coin.png');
+	background-position: -237px -65px;
 	float: left;
-	height: 53px;
-	width: 65px;
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
-
-.coin-menu4-current{
-	background-image: url('../../images/coin100-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
-	float: left;
-	height: 53px;
-	width: 65px;
-}
-
 .coin-menu5{
-	background-image: url('../../images/coin500.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+	background-image: url('../../images/coin.png');
+	background-position: -316px 0px;
 	float: left;
-	height: 53px;
-	width: 65px;
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
-.coin-menu5:hover{
-	background-image: url('../../images/coin500-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
+.coin-menu5:hover,.coin-menu5-current{
+	background-image: url('../../images/coin.png');
+	background-position: -316px -65px;
 	float: left;
-	height: 53px;
-	width: 65px;
-}
-
-.coin-menu5-current{
-	background-image: url('../../images/coin500-hover.png');
-	background-repeat: no-repeat;
-	background-size: contain;	
-	float: left;
-	height: 53px;
-	width: 65px;
+	height: 65px;
+	width: 79px;
+	transform: scale(0.8);
 }
 /*-------------------------------------------
      網格設定區
