--- a/src/assets/css/game.css
+++ b/src/assets/css/game.css
@@ -556,7 +556,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	float: left;
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8);: */
 }
 .coin-menu1:hover,.coin-menu1-current{
 	background-image: url('../../images/coin.png');
@@ -566,7 +567,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	width: 65px; */
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8); */
 }
 .coin-menu2{
 	background-image: url('../../images/coin.png');
@@ -574,7 +576,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	float: left;
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8); */
 }
 .coin-menu2:hover,.coin-menu2-current{
 	background-image: url('../../images/coin.png');
@@ -582,7 +585,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	float: left;
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8); */
 }
 
 .coin-menu3{
@@ -591,7 +595,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	float: left;
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8); */
 }
 .coin-menu3:hover,.coin-menu3-current{
 	background-image: url('../../images/coin.png');
@@ -599,7 +604,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	float: left;
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8); */
 }
 .coin-menu4{
 	background-image: url('../../images/coin.png');
@@ -607,7 +613,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	float: left;
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8); */
 }
 .coin-menu4:hover,.coin-menu4-current{
 	background-image: url('../../images/coin.png');
@@ -615,7 +622,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	float: left;
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8); */
 }
 .coin-menu5{
 	background-image: url('../../images/coin.png');
@@ -623,7 +631,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	float: left;
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8); */
 }
 .coin-menu5:hover,.coin-menu5-current{
 	background-image: url('../../images/coin.png');
@@ -631,7 +640,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	float: left;
 	height: 65px;
 	width: 79px;
-	transform: scale(0.8);
+	zoom:0.8;
+	/* transform: scale(0.8); */
 }
 /*-------------------------------------------
      網格設定區
@@ -737,7 +747,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#775124', end
 	background: -moz-linear-gradient(top,  rgba(51,29,2,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top,  rgba(51,29,2,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom,  rgba(51,29,2,1) 0%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 	border-top-width: 1px;
 	border-top-style: solid;
 	border-top-color: #9a8326;
