--- a/src/assets/css/game.css
+++ b/src/assets/css/game.css
@@ -689,34 +689,15 @@ img{
 	text-align: center;
 	line-height: 1.55em;
 }
-
+.red{
+	color:red;
+}
 .yellow{
 	color: #FC0;
 }
 .green{
 	color: #093;
 }
-
-.flex-1 {
-	flex-grow: 1;
-	flex-shrink: 1;
-	flex-basis: 25%;
-	border: 1px solid #FFF;
-	font-size: 280%;
-	line-height: 1.2em;
-	color: #ffd236;
-}
-.flex-2 {
-	flex-grow: 1;
-	flex-shrink: 1;
-	flex-basis: 25%;
-	border: 1px solid #FFF;
-	font-size: 280%;
-	line-height: 1em;
-	color: #bd0505;
-}
-
-
 /*-------------------------------------------
      頁底設定區
 -------------------------------------------*/
@@ -745,10 +726,53 @@ img{
 /*-------------------------------------------
      自適應設定區
 -------------------------------------------*/
+@media screen and (min-width: 1280px) {
+	.video-box{
+		height:60%;
+	}
+	.betArea{
+		height:60%;
+	}
+	.betArea-pc{
+		height:79%;
+	}
+	.coinArea{
+		height:16.5%;
+	}
+	.betArea-pc-container{
+		height:50%;
+	}
+	.betArea-item{
+		font-size:2rem;
+	}
+	.caritem{
+		zoom:0.25;
+	}
+	.gameHistory{
+		height:40%;
+	}
+}
+@media screen and (max-width: 1280px) {
+	.betArea-pc{
+		height:72%;
+	}
+	.betArea-pc-container{
+		height:50%;
+	}
+	.betArea-item{
+		font-size:1.5rem;
+	}
+	.caritem{
+		zoom:0.2;
+	}
+	.gameHistory{
+		height:40%;
+	}
+	.coinArea{
+		height:20.5%;
+	}
+}
 @media screen and (max-width: 1140px) {
-	/* .container{
-	width: 1000px;
-	} */
 	.header-logo{
 		width: 20%;
 		padding-top: 5px;
@@ -799,14 +823,12 @@ img{
   		display: flex;
   		justify-content: space-around;
 	}
-
 	.betArea-item {
 		flex: 1;
 		font-size: 1rem;
 		padding-top: 0px;
 		padding-bottom: 0px;
 	}
-
 	.gameHistory{
 		width: 100%;
 		height: 37.5%;
@@ -827,7 +849,6 @@ img{
 	.betArea-mobile-container{
 		height:180px !important;
 	}
-
 }
 @media screen and (max-width: 768px) {
 	.header-btn{
@@ -835,6 +856,9 @@ img{
 	}
 	.video-box{
 		height:325px;
+	}
+	.lightBox{
+		display: block;
 	}
 	.betArea-mobile-container{
 		height:180px !important;
@@ -856,7 +880,7 @@ img{
 	.coin{
 		zoom:0.7;
 	}
-	}
+}
 	@media screen and (max-width: 414px) {
 		.header-btn{
 			width:26%;
