--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -989,7 +989,7 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   }
 }
 
-@media screen and (max-width: 1140px) {
+@media screen and (max-width: 1024px) {
   .header-logo {
     width: 20%;
     padding-top: 5px;
@@ -1009,7 +1009,7 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
 -------------------------------------------*/
   .header {
     width: 100%;
-    height: auto;
+    height: 50px;
   }
   .mainGame {
     width: 100%;
@@ -1022,6 +1022,7 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   }
   .video-box {
     width: 100%;
+    height: 325px;
   }
   .betArea {
     border: 2px solid #262626;
@@ -1032,6 +1033,9 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   }
   .betArea-mobile {
     display: block;
+  }
+  .betArea-mobile-container {
+    height: 130px !important;
   }
   .container-waps {
     height: auto;
@@ -1044,33 +1048,20 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
         justify-content: space-around;
   }
   .betArea-item {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    font-size: 1rem;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    font-size: 1.5rem;
+  }
+  .betArea-mobile {
+    height: 130px;
   }
   .gameHistory {
     width: 100%;
-    height: 37.5%;
+    height: 220px;
     background-image: url(../../images/cardroad_bg_20.png);
     background-repeat: repeat;
     background-position: left top;
   }
   .tabsArea {
-    width: 100%;
-    background-color: #000;
-    background-position: bottom;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .video-box {
-    height: 325px;
-  }
-  .betArea-mobile-container {
-    height: 180px !important;
+    display: none;
   }
 }
 
