--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -54,6 +54,10 @@
 	}
 }
 @media screen and (max-width: 1140px) {
+
+
+}
+@media screen and (max-width: 1024px) {
 	.header-logo{
 		width: 20%;
 		padding-top: 5px;
@@ -73,7 +77,7 @@
 -------------------------------------------*/
 	.header{
 		width: 100%;
-		height: auto;
+		height: 50px;
 	}
 	.mainGame{
 		width: 100%;
@@ -86,6 +90,7 @@
 	}
 	.video-box{
 		width: 100%;
+		height:325px;
 	}
 	.betArea{
 		border: 2px solid #262626;
@@ -97,6 +102,9 @@
 	.betArea-mobile{
 		display: block;
 	}
+	.betArea-mobile-container{
+		height:130px !important;
+	}
 	.container-waps{
 		height:auto;
 	}
@@ -105,32 +113,26 @@
   		justify-content: space-around;
 	}
 	.betArea-item {
-		flex: 1;
-		font-size: 1rem;
-		padding-top: 0px;
-		padding-bottom: 0px;
+		font-size: 1.5rem;
+	}
+	.betArea-mobile{
+		height:130px;
 	}
 	.gameHistory{
 		width: 100%;
-		height: 37.5%;
+		height: 220px;
 		background-image: url(../../images/cardroad_bg_20.png);
 		background-repeat: repeat;
 		background-position: left top;
 	}
 	.tabsArea{
-		width: 100%;
-		background-color: #000;
-		background-position: bottom;
+		display: none;
+		// width: 100%;
+		// background-color: #000;
+		// background-position: bottom;
 	}
 }
-@media screen and (max-width: 1024px) {
-	.video-box{
-		height:325px;
-	}
-	.betArea-mobile-container{
-		height:180px !important;
-	}
-}
+
 @media screen and (max-width: 768px) {
 	.header-btn{
 		width:20%;
