//1024rwd初步排版完成

--- a/src/assets/css/scss/components/_buttom.scss
+++ b/src/assets/css/scss/components/_buttom.scss
@@ -4,7 +4,7 @@
 .header-btn{
 	width:85%;
 	display: inline-block;
-	line-height: 1.75em;
+	line-height: 1.75rem;
 	text-align: center;
 	white-space: nowrap;
 	vertical-align: middle;
