--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -360,7 +360,7 @@ img {
 .header-btn {
   width: 85%;
   display: inline-block;
-  line-height: 1.75em;
+  line-height: 1.75rem;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
@@ -990,13 +990,24 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
 }
 
 @media screen and (max-width: 1024px) {
+  .header {
+    width: 100%;
+    height: 50px;
+  }
   .header-logo {
-    width: 20%;
+    width: 15%;
+    height: 100%;
     padding-top: 5px;
     padding-bottom: 0px;
   }
+  .header-logo img {
+    height: 100%;
+  }
   .header-btnList {
-    width: 80%;
+    width: 85%;
+  }
+  .header-btn {
+    width: 30%;
   }
   .header-bottom {
     display: none;
@@ -1004,22 +1015,12 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   .font-total {
     line-height: 1.5em;
   }
-  /*-------------------------------------------
-     欄目設定區
--------------------------------------------*/
-  .header {
-    width: 100%;
-    height: 50px;
-  }
   .mainGame {
     width: 100%;
   }
   /*-------------------------------------------
      按鈕設定區
 -------------------------------------------*/
-  .header-btn {
-    width: 30%;
-  }
   .video-box {
     width: 100%;
     height: 325px;
