--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -58,13 +58,25 @@
 
 }
 @media screen and (max-width: 1024px) {
+	.header{
+		width: 100%;
+		height: 50px;
+	}
 	.header-logo{
-		width: 20%;
+		width: 15%;
+		height:100%;
 		padding-top: 5px;
 		padding-bottom: 0px;
+		img{
+			height:100%;
+		}
 	}
 	.header-btnList{
-		width: 80%;
+		width: 85%;
+	}
+	.header-btn{
+		width:30%;
+		// line-height:1.75rem;
 	}
 	.header-bottom{  
 		display: none;
@@ -72,22 +84,14 @@
 	.font-total{
 		line-height: 1.5em;
 	}
-/*-------------------------------------------
-     欄目設定區
--------------------------------------------*/
-	.header{
-		width: 100%;
-		height: 50px;
-	}
+	
 	.mainGame{
 		width: 100%;
 	}	
 /*-------------------------------------------
      按鈕設定區
 -------------------------------------------*/
-	.header-btn{
-		width:30%
-	}
+	
 	.video-box{
 		width: 100%;
 		height:325px;
