--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -107,7 +107,7 @@
 		display: block;
 	}
 	.betArea-mobile-container{
-		height:130px !important;
+		height:130px;
 	}
 	.container-waps{
 		height:auto;
@@ -147,8 +147,11 @@
 	.lightBox{
 		display: block;
 	}
+	.betArea-mobile{
+		height:160px;
+	}
 	.betArea-mobile-container{
-		height:180px !important;
+		height:160px;
 	}
 	.tabsArea{
 		display: none;
@@ -171,31 +174,35 @@
 @media screen and (max-width: 414px) {
 		.header-btn{
 			width:26%;
-			height:45px;
-			font-size:large;
 		}
 		.video-box{
-			height:217px;
+			height:320px;
+		}
+		.betArea{
+			height:340px;
+		}
+		.betArea-mobile{
+			height:240px;
+		}
+		.betArea-mobile-container{
+			height:240px;
 		}
 		.betArea-item {
 			font-size: 1.5rem;
 		}
 		.stand-mobile-container{
-			height:187px !important;
+			height:187px;
+		}
+		.gameHistory{
+			height:115px;
 		}
 		.caritem{
 			zoom: 0.15;
 		}
 }
 @media screen and (max-width: 375px) {
-		.video-box{
-			height:195px;
-		}
 		.betArea-item {
-			font-size: 1rem;
-		}
-		.betArea-mobile-container{
-			height:110px !important;
+			font-size: 1.5rem;
 		}
 		.caritem{
 			zoom: 0.15;
