--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -175,9 +175,6 @@ img {
 .betArea-item {
   position: relative;
   cursor: pointer;
-  -webkit-box-flex: 25%;
-      -ms-flex: 25%;
-          flex: 25%;
   margin: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1043,20 +1040,23 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   }
   .betArea-mobile {
     display: block;
-    height: 280px;
+    height: 250px;
   }
   .betArea-mobile-container {
-    height: 280px;
+    height: 250px;
   }
   .coin {
     zoom: 1.5;
   }
   .betArea-item {
     font-size: 2.5rem;
+    -webkit-box-flex: 20%;
+        -ms-flex: 20%;
+            flex: 20%;
   }
   .gameHistory {
     width: 100%;
-    height: 220px;
+    height: 260px;
     background-image: url(../../images/cardroad_bg_20.png);
     background-repeat: repeat;
     background-position: left top;
@@ -1079,14 +1079,17 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   .video-box {
     height: 400px;
   }
+  .gameHistory {
+    height: 240px;
+  }
   .lightBox {
     display: block;
   }
   .betArea-mobile {
-    height: 180px;
+    height: 160px;
   }
   .betArea-mobile-container {
-    height: 180px;
+    height: 160px;
   }
   .tabsArea {
     display: none;
@@ -1127,9 +1130,14 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   }
   .betArea-mobile-container {
     height: 211px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .betArea-item {
     font-size: 1.5rem;
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
   }
   .coin {
     zoom: 0.9;
@@ -1142,6 +1150,15 @@ a.btn-c.disabled, fieldset[disabled] a.btn-c {
   }
   .caritem {
     zoom: 0.15;
+  }
+  #loading {
+    width: 60px;
+    height: 60px;
+    left: 10px;
+  }
+  #countNumber {
+    font-size: 2.6rem;
+    top: 2px;
   }
 }
 
