--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -110,20 +110,21 @@
 	}
 	.betArea-mobile{
 		display: block;
-		height:280px;
+		height:250px;
 	}
 	.betArea-mobile-container{
-		height:280px;
+		height:250px;
 	}
 	.coin{
 		zoom:1.5;
 	}
 	.betArea-item {
 		font-size: 2.5rem;
+		flex:20%;
 	}
 	.gameHistory{
 		width: 100%;
-		height: 220px;
+		height: 260px;
 		background-image: url(../../images/cardroad_bg_20.png);
 		background-repeat: repeat;
 		background-position: left top;
@@ -146,14 +147,17 @@
 	.video-box{
 		height:400px;
 	}
+	.gameHistory{
+		height:240px;
+	}
 	.lightBox{
 		display: block;
 	}
 	.betArea-mobile{
-		height:180px;
+		height:160px;
 	}
 	.betArea-mobile-container{
-		height:180px;
+		height:160px;
 	}
 	.tabsArea{
 		display: none;
@@ -193,9 +197,11 @@
 		}
 		.betArea-mobile-container{
 			height:211px;
+			flex-wrap: wrap;
 		}
 		.betArea-item {
 			font-size: 1.5rem;
+			flex:auto;
 		}
 		.coin{
 			zoom:0.9;
@@ -208,6 +214,15 @@
 		}
 		.caritem{
 			zoom: 0.15;
+		}
+		#loading{
+			width:60px;
+			height:60px;
+			left:10px;
+		}
+		#countNumber{
+			font-size: 2.6rem;
+			top:2px;
 		}
 }
 @media screen and (max-width: 375px) {
