//整理不需要的CSS代碼、優化SCSS-1

--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -2,6 +2,7 @@
 
 //base
 @import './scss/base/variable';
+@import './scss/util/util';
 @import './scss/base/base';
 //layout
 @import './scss//layout/mainLayout';
