--- a/src/assets/css/scss/base/_variable.scss
+++ b/src/assets/css/scss/base/_variable.scss
@@ -1,6 +1,11 @@
-//text相關
+//顏色變數
+
+//注區文字
 $betArea_yellow:#ffd236;
 $betArea_red:#bd0505;
 
 //網站圖片
 $body-bg-img:url('../../images/body-bg.png');
+//coin序列圖
+$coin-spriteImg:url('../../images/coin.png');
+
