--- a/src/assets/css/scss/components/_coin.scss
+++ b/src/assets/css/scss/components/_coin.scss
@@ -1,3 +1,9 @@
+
+@mixin coinSpritePosition($x,$y){
+	background-image:$coin-spriteImg;
+	background-position: $x $y;
+}
+
 /*-------------------------------------------
      硬幣設定區
 -------------------------------------------*/
@@ -9,43 +15,32 @@
 	zoom:0.8;
 }
 .coin-menu1{
-	background-image: url('../../images/coin.png');
-	background-position: 0px 0px;
+	@include coinSpritePosition(0px,0px)
 }
 .coin-menu1:hover,.coin-menu1-current{
-	background-image: url('../../images/coin.png');
-	background-position: 0px -65px;
+	@include coinSpritePosition(0px,-65px)
 }
 .coin-menu2{
-	background-image: url('../../images/coin.png');
-	background-position: -79px 0px;
+	@include coinSpritePosition(-79px,0px)
 }
 .coin-menu2:hover,.coin-menu2-current{
-	background-image: url('../../images/coin.png');
-	background-position: -79px -65px;
+	@include coinSpritePosition(-79px,-65px)
 }
-
 .coin-menu3{
-	background-image: url('../../images/coin.png');
-	background-position: -158px 0px;
+	@include coinSpritePosition(-158px,0px)
 }
 .coin-menu3:hover,.coin-menu3-current{
-	background-image: url('../../images/coin.png');
-	background-position: -158px -65px;
+	@include coinSpritePosition(-158px,-65px)
 }
 .coin-menu4{
-	background-image: url('../../images/coin.png');
-	background-position: -237px 0px;
+	@include coinSpritePosition(-237px,0px)
 }
 .coin-menu4:hover,.coin-menu4-current{
-	background-image: url('../../images/coin.png');
-	background-position: -237px -65px;
+	@include coinSpritePosition(-237px,-65px)
 }
 .coin-menu5{
-	background-image: url('../../images/coin.png');
-	background-position: -316px 0px;
+	@include coinSpritePosition(-316px,0px)
 }
 .coin-menu5:hover,.coin-menu5-current{
-	background-image: url('../../images/coin.png');
-	background-position: -316px -65px;
+	@include coinSpritePosition(-316px,-65px)
 }
