--- a/src/assets/css/scss/util/_util.scss
+++ b/src/assets/css/scss/util/_util.scss
@@ -2,3 +2,8 @@
     display: flex;
     flex-wrap: wrap;
 }
+@mixin flex-x-spaceEvenly-y-center {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
