--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -21,6 +21,7 @@
 		font-size:2rem;
 	}
 	.caritem{
+		// transform: scale(0.2);
 		zoom:0.2;
 	}
 	.gameHistory{
@@ -44,6 +45,7 @@
 		font-size:1.5rem;
 	}
 	.caritem{
+		// transform: scale(0.16);
 		zoom:0.16;
 	}
 	.gameHistory{
@@ -114,7 +116,8 @@
 		height:280px;
 	}
 	.coin{
-		zoom:1.7;
+		transform: scale(1.7);
+		// zoom:1.7;
 	}
 	.betArea-item {
 		font-size: 2.5rem;
@@ -128,6 +131,7 @@
 		background-position: left top;
 	}
 	.caritem{
+		// transform: scale(0.22);
 		zoom:0.22;
 	}
 	.tabsArea{
@@ -169,7 +173,8 @@
 		font-size: 2rem;
 	}
 	.coin{
-		zoom:1.2;
+		transform: scale(1.2);
+		// zoom:1.2;
 	}
 }
 @media screen and (max-width: 414px) {
@@ -199,7 +204,8 @@
 			flex:auto;
 		}
 		.coin{
-			zoom:0.9;
+			transform: scale(0.9);
+			// zoom:0.9;
 		}
 		.ammo5{
             left:-200px !important;
@@ -220,6 +226,7 @@
 			height:115px;
 		}
 		.caritem{
+			// transform: scale(0.15);
 			zoom: 0.15;
 		}
 		#loading{
@@ -230,6 +237,9 @@
 		#countNumber{
 			font-size: 2.6rem;
 			top:2px;
+		}
+		.btn-p{
+			zoom:0.15;
 		}
 }
 @media screen and (max-width: 375px) {
@@ -246,9 +256,11 @@
 			height:179px;
 		}
 		.coin{
-			zoom:0.8;
+			transform: scale(0.8);
+			// zoom:0.8;
 		}
 		.caritem{
+			// transform: scale(0.15);
 			zoom: 0.15;
 		}
 }	
