--- a/src/assets/css/scss/components/_coin.scss
+++ b/src/assets/css/scss/components/_coin.scss
@@ -12,7 +12,7 @@
 	float: left;
 	height: 65px;
 	width: 79px;
-	zoom:1;
+	transform: scale(1);
 }
 .coin-menu1{
 	@include coinSpritePosition(0px,0px)
